Revision history for Data-ICal

0.13

    * We now ignore blank lines in parsed files (by ignoring null properties when adding them to a data structure)
    * ical2html example script contributed by Tatsuhiko Miyagawa <miyagawa@bulknews.net>

0.12

    * Better handling of properties that should read "0" - Patch from Duncan Forsyth <duncan@wcn.co.uk>
    * Removed the note about Google and weird folding behaviour


0.11 Mon Nov 27 12:57:03 EST 2006

    * Added the ability to not fold the output, to appease the great Google-monster

0.10 Sun Oct 15 15:55:28 EDT 2006

    * Fix the test suite to stop assuming version numbers

0.09 Sun Oct 15 15:49:29 EDT 2006

    * Quieted down ::Property when you passed in undef strings.

0.08 Sat Sep 16 14:03:03 BST 2006

    * The recur type is defined in section 4.3.10 in RFC2445.

    This type is separated by comma or semicolon as shown in "description"
    part of this section;

    | multiple "recur" values are specified by a COMMA character (US-ASCII
    decimal 44) separated list of values.

    | The rule parts are separated from each other by the SEMICOLON
    character (US-ASCII decimal 59).

    At the middle of this section, an example is presented;

    | RRULE:FREQ=MONTHLY;BYDAY=MO,TU,WE,TH,FR;BYSETPOS=-1

    See http://www.kanzaki.com/docs/ical/recur.html

        - Takeru Inoue


0.07

    * Doc patches from MARKSTOS
    * Proper quoting in properties, from MARKSTOS

0.05  Thu Oct  6 20:56:05 EDT 2005
    * Fixed a signature file

0.04  Tue Aug 30 05:30:59 EDT 2005
    * Better roundtripping to .ics

0.03  Mon Aug 15 16:05:00 EDT 2005
    * Can parse strings, not just files (this is an incompatible API change)

0.02  Wed Aug 03 11:25:00 EDT 2005
    * Parser support, thanks to Simon Wistow
    * Full Time Zone support

0.01  Wed Jul 27 11:52:12 EDT 2005

    * Initial release
