@@ -1,0 +1,59 @@
+BEGIN:VCALENDAR
+X-WR-CALNAME:Data::ICal test calendar
+PRODID:Data::ICal test
+BEGIN:VTIMEZONE
+TZID:Europe/London
+LAST-MODIFIED:20050716T111510Z
+BEGIN:DAYLIGHT
+DTSTART:20030330T020000
+TZOFFSETTO:+0100
+TZOFFSETFROM:+0000
+TZNAME:BST
+END:DAYLIGHT
+BEGIN:STANDARD
+DTSTART:20031026T020000
+TZOFFSETTO:+0000
+TZOFFSETFROM:+0100
+TZNAME:GMT
+END:STANDARD
+BEGIN:DAYLIGHT
+DTSTART:20040328T020000
+TZOFFSETTO:+0100
+TZOFFSETFROM:+0000
+TZNAME:BST
+END:DAYLIGHT
+BEGIN:STANDARD
+DTSTART:20041031T020000
+TZOFFSETTO:+0000
+TZOFFSETFROM:+0100
+TZNAME:GMT
+END:STANDARD
+BEGIN:DAYLIGHT
+DTSTART:20050327T020000
+TZOFFSETTO:+0100
+TZOFFSETFROM:+0000
+TZNAME:BST
+END:DAYLIGHT
+BEGIN:STANDARD
+DTSTART:20051030T020000
+TZOFFSETTO:+0000
+TZOFFSETFROM:+0100
+TZNAME:GMT
+END:STANDARD
+END:VTIMEZONE
+BEGIN:VEVENT
+DTSTART;TZID=Europe/London:20050802T170000
+DURATION:PT6H
+LOCATION:The Restaurant at the End of the Universe
+SEQUENCE:42
+SUMMARY:Data::ICal release party
+URL;VALUE=URI:http://www.bestpractical.com
+BEGIN:VALARM
+TRIGGER;VALUE=DATE-TIME:19970317T133000Z
+REPEAT:4
+DURATION:PT15M
+ACTION:AUDIO
+ATTACH;FMTTYPE=audio/basic:ftp://host.com/pub/sounds/bell-01.aud
+END:VALARM
+END:VEVENT
+END:VCALENDAR
